--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div id="socials-container">
           <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='https://www.linkedin.com/in/shritama-sengupta-141615187/'">
-          <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/codeforever200'">
+          <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/senguptashritama'">
         </div>
       </div>
   </section>
@@ -157,7 +157,7 @@
           <p> Evaluated the cost-effectiveness and the incremental impact of recovery strategies in a bank's debt collection
             by applying extensive EDA, statistical tests and regression discontinuity. </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/codeforever200/Optimizing-Debt-Collection-with-Regression-Discontinuity'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/senguptashritama/Optimizing-Debt-Collection-with-Regression-Discontinuity'">Github</button>
           </div>
         </div>
         <div class="details-container color-container">
@@ -169,7 +169,7 @@
             to enable dynamic user interactions with video content.
             Powered by language models and a compelling easy to use front-end.  </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/codeforever200/SummarizeChatVision'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/senguptashritama/SummarizeChatVision'">Github</button>
           </div>
         </div>
         <div class="details-container color-container">
@@ -183,7 +183,7 @@
             providing valuable insights into model efficacy.
             </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/codeforever200/Crypto_Currency_Forecasting_and_Analsysis'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/senguptashritama/Crypto_Currency_Forecasting_and_Analsysis'">Github</button>
           </div>
         </div>
       </div>
@@ -198,7 +198,7 @@
             Employed statistical tools, ANOVA and regression analysis, to identify key factors influencing 
             funding outcomes in the startup ecosystem</p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/codeforever200/Indian_Startup_Funding_Analysis'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/senguptashritama/Indian_Startup_Funding_Analysis'">Github</button>
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://public.tableau.com/app/profile/shritama.sengupta/viz/Indian_Startup_Funding_Trend/Overall2'">Live Demo</button>
           </div>
         </div>
@@ -211,7 +211,7 @@
             spending insights, and income utilization metrics. 
             Delivered concise, data-driven recommendations to boost credit card usage based on market trends.</p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/codeforever200/Credit-Card-Launch-PowerBI'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/senguptashritama/Credit-Card-Launch-PowerBI'">Github</button>
           </div>
         </div>
         <div class="details-container color-container">
@@ -223,7 +223,7 @@
             Used Mage for precise ETL to structure flat files, resulting in an interactive dashboard for data visualization.
             </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/codeforever200/data-engineering-gcp-project'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/senguptashritama/data-engineering-gcp-project'">Github</button>
           </div>
         </div>
       </div>
