--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
     </div>
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#Services'">
   </section>
+  </section>
   <section id="Services">
-    <h1 class="title">Experience</h1>
+    <p class="section__text__p1">Explore My</p>
+    <h1 class="title">Services</h1>
     <div class="experience-details-container wider-container">
       <div class="about-containers">
         <div class="details-container">
@@ -105,6 +107,7 @@
             <p>Develop predictive models to forecast future trends, identify patterns, and make data-driven predictions. Offer services in regression analysis, classification, and time series forecasting to help businesses optimize operations, anticipate customer behavior, and mitigate risks.</p>
           </div>
         </div>
+      </div>
       <div class="about-containers">
         <div class="details-container">
           <h2 class="experience-sub-title">Machine Learning Solutions:</h2>
