--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div id="socials-container">
           <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='https://www.linkedin.com/in/shritama-sengupta-141615187/'">
-          <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/senguptashritama'">
+          <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/codeforever200'">
         </div>
       </div>
   </section>
@@ -69,6 +69,7 @@
             <p>3+ Relevent Internships</p>
           </div>
           <div class="details-container">
+            <img src="./assets/education.png" alt="Education icon" class="icon">
             <h3>Education</h3>
             <p>Bachelor of Computer Applications<br> M.Sc. Data Science</p>
           </div>
@@ -78,6 +79,11 @@
             Hello! I'm Shritama Sengupta, a passionate and dedicated data scientist.
             With a strong academic background and hands-on experience in the field of data science,
             I bring a blend of technical expertise and innovative thinking to every project I undertake.<br><br>
+            I'm fervently dedicated to translating data into actionable insights that 
+            drive strategic decision-making. With expertise in Machine Learning, Deep Learning, and Statistics, 
+            I specialize in extracting meaningful insights from complex datasets. My goal is to innovate and optimize processes,
+            unlocking value for organizations in today's data-driven landscape. Passionate about pushing the boundaries of AI, 
+            I thrive on exploring new frontiers, from natural language processing to computer vision.<br><br>
 
             <b><em>"Data is the new oil. It’s valuable, but if unrefined it cannot really be used."</em> - Clive Humby</b>
 
@@ -86,7 +92,6 @@
       </div>
     </div>
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#Services'">
-  </section>
   </section>
   <section id="Services">
     <p class="section__text__p1">Explore My</p>
@@ -152,7 +157,7 @@
           <p> Evaluated the cost-effectiveness and the incremental impact of recovery strategies in a bank's debt collection
             by applying extensive EDA, statistical tests and regression discontinuity. </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/senguptashritama/Optimizing-Debt-Collection-with-Regression-Discontinuity'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/codeforever200/Optimizing-Debt-Collection-with-Regression-Discontinuity'">Github</button>
           </div>
         </div>
         <div class="details-container color-container">
@@ -164,7 +169,7 @@
             to enable dynamic user interactions with video content.
             Powered by language models and a compelling easy to use front-end.  </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/senguptashritama/SummarizeChatVision'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/codeforever200/SummarizeChatVision'">Github</button>
           </div>
         </div>
         <div class="details-container color-container">
@@ -178,7 +183,7 @@
             providing valuable insights into model efficacy.
             </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/senguptashritama/Crypto_Currency_Forecasting_and_Analsysis'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/codeforever200/Crypto_Currency_Forecasting_and_Analsysis'">Github</button>
           </div>
         </div>
       </div>
@@ -193,7 +198,7 @@
             Employed statistical tools, ANOVA and regression analysis, to identify key factors influencing 
             funding outcomes in the startup ecosystem</p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/senguptashritama/Indian_Startup_Funding_Analysis'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/codeforever200/Indian_Startup_Funding_Analysis'">Github</button>
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://public.tableau.com/app/profile/shritama.sengupta/viz/Indian_Startup_Funding_Trend/Overall2'">Live Demo</button>
           </div>
         </div>
@@ -206,7 +211,7 @@
             spending insights, and income utilization metrics. 
             Delivered concise, data-driven recommendations to boost credit card usage based on market trends.</p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/senguptashritama/Credit-Card-Launch-PowerBI'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/codeforever200/Credit-Card-Launch-PowerBI'">Github</button>
           </div>
         </div>
         <div class="details-container color-container">
@@ -218,7 +223,7 @@
             Used Mage for precise ETL to structure flat files, resulting in an interactive dashboard for data visualization.
             </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/senguptashritama/data-engineering-gcp-project'">Github</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/codeforever200/data-engineering-gcp-project'">Github</button>
           </div>
         </div>
       </div>
